# pdf-tools

./: .gitattributes  .gitignore  CHANGELOG.md  ImplementationNotes_V2.md  LICENSE  README.md  Run PDF Toolkit.bat  install_context_menu.bat  pyproject.toml  requirements.txt  run.sh  setup.bat  setup.sh  uninstall_context_menu.bat
src/pdf_toolkit/: __init__.py  __main__.py  pdf_resizer.py
tests/: test_compress.py
