[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-toolkit"
version = "2.0.0"
description = "Shrink PDF file sizes by compressing images and optimizing structure"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4.0",
    "pikepdf>=8.0",
    "Pillow>=10.0",
    "typer[all]>=0.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
pdf-toolkit = "pdf_toolkit.pdf_resizer:app"

[project.optional-dependencies]
dev = ["build", "twine", "pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
